Dodal video v git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -100,5 +100,7 @@ venv.bak/
 # mkdocs documentation
 /site
 
+# Dodal naj ne sledi tem videu
 # mypy
 .mypy_cache/
+/Phantom/Phantom/Test video0.avi
